  - Apply [ 2051599 ] multi-page tables in latex writer (from pabigot).
  - Fix: for spanish ``~n`` is ``n`` with tilde above, change to ``~{}n``.
  - Change: has_key for dictionaries (not Nodes) to in-operator.
  - Merge adjacent citations into one latex cite command.
  - Failsave implementation of custom roles. LaTeX compilation now ignores
    unknown classes instead of aborting with an error.
  - Smaller document preamble: use fallback definitions, include only if
    needed in the document.
  - LaTeX packages can be used as ``--stylesheet`` arguments without
    restriction. (A style sheet is now referenced with the ``\usepackage``
    command, if it ends with ``.sty`` or has no extension.)
  - Add ``bp`` to lenghts without unit (prevents LaTex errors).
  - Do not convert ``px`` to ``pt`` (``px`` is supported by pdfTeX since
    2005-02-04 as a configurable length unit).
  - Do not use the obsolete 'ae' and 'aeguill' packages
    if font-encoding is set to '' (default).

* docs/ref/rst/restructuredtext.txt:

  - Documented Unicode characters allowed as inline markup openers,
    closers, and delimiters.


Release 0.5 (2008-06-25)
========================

* docutils/languages/he.py: Added to project: Hebrew mappings by
  Meir Kriheli.

* docutils/parsers/rst/languages/he.py: Added to project: Hebrew 
  mappings by Meir Kriheli.

* docutils/frontend.py:

  - Configuration files are now assumed and required to be
    UTF-8-encoded.
  - Paths of applied configuration files are now recorded in the
    runtime setting ``_config_files`` (accessible via
    ``--dump-settings``).
  - Added ``--strip-elements-with-class`` and ``--strip-class``
    options (``strip_elements_with_classes`` and ``strip_classes``
    settings).

* docutils/io.py:

  - Added code to determine the input encoding from data: encoding
    declarations or the presence of byte order marks (UTF-8 & UTF-16).
  - Added support for IronPython 1.0.

* docutils/nodes.py:
